🔧 Debugging: Shadow DOM Implementation & TikTok Interference
- Implemented Shadow DOM to prevent TikTok from detecting and removing the blocking overlay.
-  was being deleted or overridden, possibly by TikTok’s scripts.
- Added a global declaration to ensure  exists before execution.
- Discovered that TikTok may be explicitly blocking our overlay, requiring a new variable name ().
- Implemented  to ensure  is available before appending the overlay.
- Next Steps:
  - Verify if  is still overridden after renaming.
  - Test if  is consistently available before appending elements.
  - Investigate content script execution timing to ensure it's injected reliably.

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
       "dist/searchBarListeners.js",
       "dist/content.js"
     ],
-    "run_at": "document_end"
+    "run_at": "document_start"
   }
 ],
 "web_accessible_resources": [
